@@ -1,0 +1,22 @@
+/* Do not edit this file. It was automatically generated. */
+
+#ifndef HEADER_HostnameMeter
+#define HEADER_HostnameMeter
+/*
+htop
+(C) 2004-2006 Hisham H. Muhammad
+Released under the GNU GPL, see the COPYING file
+in the source distribution for its full text.
+*/
+
+#include "Meter.h"
+
+#include <unistd.h>
+
+#include "debug.h"
+
+extern int HostnameMeter_attributes[];
+
+extern MeterType HostnameMeter;
+
+#endif
